--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 *.o
 .DS_Store
 .vscode
+libft.a
+.gitignore
+libmlx.dylib
+minilibx_mms_20200219/mlx_image.swiftmodule
+minilibx_mms_20200219/mlx_image.swiftdoc
+minilibx_mms_20200219/mlx_image.swiftsourceinfo
+minilibx_mms_20200219/mlx_init.swiftdoc
+minilibx_mms_20200219/mlx_init.swiftmodule
+minilibx_mms_20200219/mlx_window.swiftdoc
+minilibx_mms_20200219/mlx_window.swiftsourceinfo
+minilibx_mms_20200219/mlx_window.swiftmodule
