--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ minilibx_mms_20200219/mlx_init.swiftmodule
 minilibx_mms_20200219/mlx_window.swiftdoc
 minilibx_mms_20200219/mlx_window.swiftsourceinfo
 minilibx_mms_20200219/mlx_window.swiftmodule
+libmlx.a
