--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ minilibx_mms_20200219/mlx_window.swiftdoc
 minilibx_mms_20200219/mlx_window.swiftsourceinfo
 minilibx_mms_20200219/mlx_window.swiftmodule
 libmlx.a
+example/
